# tree-sitter-alloy

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  basic.alloy  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-alloy.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_alloy/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAlloy/: alloy.h
bindings/swift/TreeSitterAlloyTests/: TreeSitterAlloyTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: statements.txt
