[package]
name = "tree-sitter-alloy"
description = "grafana alloy grammer for tree-sitter"
version = "0.1.1"
authors = ["Matt Conway"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "alloy"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mattsre/tree-sitter-alloy"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
